<resources>
    <string name="app_name">Fast Medic</string>
    <string name="none" translatable="false">NONE</string>
    <string name="skip">Пропустить</string>
    <string name="analyses">Анализы</string>
    <string name="expressSbor">Экспресс сбор и получение проб</string>
    <string name="create_password">Создайте пароль</string>
    <string name="forYourPersonalSave">Для защиты ваших персональных данных</string>
    <string name="card_creating">Создание карты пациента</string>
    <string name="without_card_cc">Без карты пациента вы не сможете заказать анализы.</string>
    <string name="create">Создать</string>
    <string name="in_cards_cc">В картах пациентов будут храниться результаты анализов вас и ваших близких.</string>
    <string name="login_with_yandex">Войти с Яндекс</string>
    <string name="login_with">Или войдите с помощью</string>
    <string name="next">Далее</string>
    <string name="email_example" translatable="false">example@mail.ru</string>
    <string name="login_for">Войдите, чтобы пользоваться функциями приложения</string>
    <string name="cooldown">Отправить код повторно можно будет через 60 секунд</string>
    <string name="enter_code_from_mail">Введите код из E-mail</string>
    <string name="pol">Пол</string>
    <string name="lastname">Отчество</string>
    <string name="name">Имя</string>
    <string name="birthday">Дата рождения</string>
    <string name="patronymic">Фамилия</string>
    <string name="gotoFinish">Перейти к оформлению заказа</string>

    <string-array name="pol">
        <item>Мужской</item>
        <item>Женский</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
</resources>